Stelle die Musterlösung zu den Dictionaries fertig

--- a/docs/240909/dictionaries.ipynb
+++ b/docs/240909/dictionaries.ipynb
@@ -11,9 +11,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## VIII örtige Eidgenossenschaft\n",
+    "\n",
     "Als erste Übung soll ein Python Dictionary der VIII örtigen\n",
     "Eidgenossenschaft erstellt werden. Als Schlüssel dient der Ort, Inhalt\n",
-    "sind Beitrittsjahr und Hauptort."
+    "sind Beitrittsjahr, Hauptort sowie die Information, ob es sich um einen \n",
+    "Stadt- oder Landort handelt.\n",
+    "\n",
+    "Den Bestand der VIII örtigen Eidgenossenschaft kann untenstehender Karte\n",
+    "entnommen werden."
    ]
   },
   {
@@ -32,19 +38,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Welche Datenstruktur (Liste oder Tupel) soll für die Einträge im Dictionary verwendet werden?\n",
-    "ur = (1291, 'Altdorf')\n",
-    "sz = (1291, 'Schwyz')\n",
-    "uw = (1291, 'Stans')\n",
-    "lu = (1332, 'Luzern')\n",
-    "zh = (1351, 'Zürich')\n",
-    "zg = (1352, 'Zug')\n",
-    "be = (1353, 'Bern')\n",
-    "gl = (1386, 'Glarus')\n",
+    "ur = (1291, 'Altdorf', True)\n",
+    "sz = (1291, 'Schwyz',  True)\n",
+    "uw = (1291, 'Stans',   True)\n",
+    "lu = (1332, 'Luzern',  False)\n",
+    "zh = (1351, 'Zürich',  False)\n",
+    "zg = (1352, 'Zug',     False)\n",
+    "be = (1353, 'Bern',    False)\n",
+    "gl = (1386, 'Glarus',  True)\n",
     "viii_orte = {\n",
     "    'Uri' : ur,\n",
     "    'Schwyz' : sz,\n",
@@ -58,30 +64,41 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In der nächsten Zelle sollen die Angaben zu Schwyz abgefragt werden."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(1352, 'Zug')"
+       "(1291, 'Schwyz', True)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "viii_orte['Zug']"
+    "viii_orte['Schwyz']"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Zwischen 1386 (Schlacht bei Sempach) und 1798 (Beginn der Helvetik) bestand die Eidgenossenschaft aus 13 Orten. Im folgenden soll ein eigener Python Dictionary mit den seit 1386 dazugekommenen zusätzlichen fünf Orten erstell werden."
+    "## XIII örtige Eidgenossenschaft\n",
+    "\n",
+    "Zwischen 1386 (Schlacht bei Sempach) und 1798 (Beginn der Helvetik) bestand die Eidgenossenschaft aus 13 Orten. Im folgenden soll ein eigener Python Dictionary mit den seit 1386 dazugekommenen zusätzlichen fünf Orten erstell werden.\n",
+    "\n",
+    "Welche das sind, kann untenstehender Karte entnommen werden."
    ]
   },
   {
@@ -92,16 +109,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Die Angaben zu den Beitrittsjahren finden sich im [Wikipedia Artikel zur XIII örtigen Eidgenossenschaft](https://de.wikipedia.org/wiki/Dreizehn_Alte_Orte)."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "fr = (1481, 'Fribourg')\n",
-    "so = (1481, 'Solothurn')\n",
-    "sh = (1501, 'Schaffhausen')\n",
-    "ba = (1501, 'Basel')\n",
-    "ap = (1513, 'Appenzell')\n",
+    "fr = (1481, 'Fribourg',     False)\n",
+    "so = (1481, 'Solothurn',    False)\n",
+    "sh = (1501, 'Schaffhausen', False)\n",
+    "ba = (1501, 'Basel',        False)\n",
+    "ap = (1513, 'Appenzell',    True)\n",
     "neue_orte = {\n",
     "    'Fribourg' : fr,\n",
     "    'Solothurn' : so,\n",
@@ -123,7 +147,7 @@
     "  `xiii_orte.update(neue_orte)`\n",
     "* `xiii_orte = {**viii_orte, **neue_orte}`\n",
     "\n",
-    "Die erste Variante ist dabei die spezifischste und daher die zu bevorziehende."
+    "Die erste Variante wurde extra für das Zusammenführen zweier Dictionaries geschaffen. Die Varianten zwei und drei führen aufgrund der Eigenschaften eines Python Dictionary auch zum Ziel. In Python sind jedoch jene Formulierungen vorzuziehen, welche zur Lösung eines konkreten Problems geschaffen worden sind."
    ]
   },
   {
@@ -159,76 +183,40 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 1,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "kantone = [ 'Zürich', 'Bern', 'Luzern', 'Uri', 'Schwyz', 'Obwalden', 'Nidwalden', 'Glarus', 'Zug', 'Freiburg', 'Solothurn', 'Basel-Stadt', 'Basel-Landschaft', 'Schaffhausen', 'Appenzell Ausserrhoden', 'Appenzell Innerrhoden', 'St. Gallen', 'Graubünden', 'Aargau', 'Thurgau', 'Tessin', 'Waadt', 'Wallis', 'Neuenburg', 'Genf', 'Jura']"
+    "## Iterieren über die alte Eidgenossenschaft\n",
+    "\n",
+    "In der nächsten Zelle soll über die Liste der XIII Orte iteriert werden. Im Rahmen dieser Iteration"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "hauptorte = ['Zürich', 'Bern', 'Luzern', 'Altdorf', 'Schwyz', 'Sarnen', 'Stans', 'Glarus', 'Zug', 'Fribourg', 'Solothurn', 'Basel', 'Liestal', 'Schaffhausen', ['Herisau', 'Trogen'], 'Appenzell', 'St. Gallen', 'Chur', 'Aarau', 'Frauenfeld', 'Bellinzona', 'Lausanne', 'Sitten', 'Neuenburg', 'Genf', 'Delsberg']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[('Zürich', 'Zürich'),\n",
-       " ('Bern', 'Bern'),\n",
-       " ('Luzern', 'Luzern'),\n",
-       " ('Uri', 'Altdorf'),\n",
-       " ('Schwyz', 'Schwyz'),\n",
-       " ('Obwalden', 'Sarnen'),\n",
-       " ('Nidwalden', 'Stans'),\n",
-       " ('Glarus', 'Glarus'),\n",
-       " ('Zug', 'Zug'),\n",
-       " ('Freiburg', 'Fribourg'),\n",
-       " ('Solothurn', 'Solothurn'),\n",
-       " ('Basel-Stadt', 'Basel'),\n",
-       " ('Basel-Landschaft', 'Liestal'),\n",
-       " ('Schaffhausen', 'Schaffhausen'),\n",
-       " ('Appenzell Ausserrhoden', ['Herisau', 'Trogen']),\n",
-       " ('Appenzell Innerrhoden', 'Appenzell'),\n",
-       " ('St. Gallen', 'St. Gallen'),\n",
-       " ('Graubünden', 'Chur'),\n",
-       " ('Aargau', 'Aarau'),\n",
-       " ('Thurgau', 'Frauenfeld'),\n",
-       " ('Tessin', 'Bellinzona'),\n",
-       " ('Waadt', 'Lausanne'),\n",
-       " ('Wallis', 'Sitten'),\n",
-       " ('Neuenburg', 'Neuenburg'),\n",
-       " ('Genf', 'Genf'),\n",
-       " ('Jura', 'Delsberg')]"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Uri ist ein Landort\n",
+      "Schwyz ist ein Landort\n",
+      "Unterwalden ist ein Landort\n",
+      "Luzern ist ein Landort\n",
+      "Zürich ist ein Landort\n",
+      "Zug ist ein Landort\n",
+      "Bern ist ein Landort\n",
+      "Glarus ist ein Landort\n"
+     ]
     }
    ],
    "source": [
-    "kantonstulple = [(kt, ho) for kt, ho in zip(kantone, hauptorte)]\n",
-    "kantonstulple"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "kantons_dictionary = dict(kantonstulple)"
+    "for key, value in viii_orte.items():\n",
+    "    if beschreibung[2]:\n",
+    "        print(f'{key} ist ein Landort')\n",
+    "    else:\n",
+    "        print(f'{key} ist ein Stadtort')"
    ]
   },
   {
@@ -255,7 +243,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.12.5"
+  },
+  "widgets": {
+   "application/vnd.jupyter.widget-state+json": {
+    "state": {},
+    "version_major": 2,
+    "version_minor": 0
+   }
   }
  },
  "nbformat": 4,
