Leere das Aufgabenblatt

--- a/docs/240909/dictionaries.ipynb
+++ b/docs/240909/dictionaries.ipynb
@@ -38,29 +38,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Welche Datenstruktur (Liste oder Tupel) soll für die Einträge im Dictionary verwendet werden?\n",
-    "ur = (1291, 'Altdorf', True)\n",
-    "sz = (1291, 'Schwyz',  True)\n",
-    "uw = (1291, 'Stans',   True)\n",
-    "lu = (1332, 'Luzern',  False)\n",
-    "zh = (1351, 'Zürich',  False)\n",
-    "zg = (1352, 'Zug',     False)\n",
-    "be = (1353, 'Bern',    False)\n",
-    "gl = (1386, 'Glarus',  True)\n",
-    "viii_orte = {\n",
-    "    'Uri' : ur,\n",
-    "    'Schwyz' : sz,\n",
-    "    'Unterwalden' : uw,\n",
-    "    'Luzern' : lu,\n",
-    "    'Zürich' : zh,\n",
-    "    'Zug' : zg,\n",
-    "    'Bern' : be,\n",
-    "    'Glarus' : gl,\n",
-    "}"
+    "# Welche Datenstruktur (Liste oder Tupel) soll für die Einträge im Dictionary verwendet werden?"
    ]
   },
   {
@@ -72,22 +54,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(1291, 'Schwyz', True)"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "viii_orte['Schwyz']"
+    "# hier Ihr Code"
    ]
   },
   {
@@ -117,22 +88,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "fr = (1481, 'Fribourg',     False)\n",
-    "so = (1481, 'Solothurn',    False)\n",
-    "sh = (1501, 'Schaffhausen', False)\n",
-    "ba = (1501, 'Basel',        False)\n",
-    "ap = (1513, 'Appenzell',    True)\n",
-    "neue_orte = {\n",
-    "    'Fribourg' : fr,\n",
-    "    'Solothurn' : so,\n",
-    "    'Schaffhausen' : sh,\n",
-    "    'Basel' : ba,\n",
-    "    'Appenzell' : ap,\n",
-    "}"
+    "# hier Ihr Code"
    ]
   },
   {
@@ -152,34 +112,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'Uri': (1291, 'Altdorf'),\n",
-       " 'Schwyz': (1291, 'Schwyz'),\n",
-       " 'Unterwalden': (1291, 'Stans'),\n",
-       " 'Luzern': (1332, 'Luzern'),\n",
-       " 'Zürich': (1351, 'Zürich'),\n",
-       " 'Zug': (1352, 'Zug'),\n",
-       " 'Bern': (1353, 'Bern'),\n",
-       " 'Glarus': (1386, 'Glarus'),\n",
-       " 'Fribourg': (1481, 'Fribourg'),\n",
-       " 'Solothurn': (1481, 'Solothurn'),\n",
-       " 'Schaffhausen': (1501, 'Schaffhausen'),\n",
-       " 'Basel': (1501, 'Basel'),\n",
-       " 'Appenzell': (1513, 'Appenzell')}"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "xiii_orte = viii_orte | neue_orte"
+    "# hier Ihr Code"
    ]
   },
   {
@@ -188,35 +125,7 @@
    "source": [
     "## Iterieren über die alte Eidgenossenschaft\n",
     "\n",
-    "In der nächsten Zelle soll über die Liste der XIII Orte iteriert werden. Im Rahmen dieser Iteration"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Uri ist ein Landort\n",
-      "Schwyz ist ein Landort\n",
-      "Unterwalden ist ein Landort\n",
-      "Luzern ist ein Landort\n",
-      "Zürich ist ein Landort\n",
-      "Zug ist ein Landort\n",
-      "Bern ist ein Landort\n",
-      "Glarus ist ein Landort\n"
-     ]
-    }
-   ],
-   "source": [
-    "for key, value in viii_orte.items():\n",
-    "    if beschreibung[2]:\n",
-    "        print(f'{key} ist ein Landort')\n",
-    "    else:\n",
-    "        print(f'{key} ist ein Stadtort')"
+    "In der nächsten Zelle soll über die Liste der XIII Orte iteriert werden. Im Rahmen dieser Iteration soll ausgegeben werden, ob es sich um einen Land- oder Stadtort handelt."
    ]
   },
   {
@@ -224,7 +133,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# hier Ihr Code"
+   ]
   }
  ],
  "metadata": {
