--- a/docs/240923/staatsausgaben.ipynb
+++ b/docs/240923/staatsausgaben.ipynb
@@ -279,6 +279,146 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Alternative Datenaufbereitung"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "adf = pd.read_csv('staatsausgaben.csv',\n",
+    "                 index_col=1)\n",
+    "\n",
+    "adf.index = adf.index.astype(int)\n",
+    "\n",
+    "adf['Mia'] = adf['CHF']/1_000_000_000\n",
+    "adf.drop('CHF', axis='columns', inplace=True)\n",
+    "\n",
+    "adf = adf.pivot(columns='Kennzahl', values='Mia')\n",
+    "\n",
+    "adf = adf.sort_index()\n",
+    "adf.columns.name = None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Bildung und Forschung</th>\n",
+       "      <th>Finanzen und Steuern</th>\n",
+       "      <th>Sicherheit</th>\n",
+       "      <th>Soziale Wohlfahrt</th>\n",
+       "      <th>Verkehr</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Jahr</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1990</th>\n",
+       "      <td>2.915631</td>\n",
+       "      <td>4.284407</td>\n",
+       "      <td>6.232319</td>\n",
+       "      <td>6.875148</td>\n",
+       "      <td>4.626737</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1991</th>\n",
+       "      <td>3.196256</td>\n",
+       "      <td>4.556436</td>\n",
+       "      <td>6.403684</td>\n",
+       "      <td>8.091567</td>\n",
+       "      <td>5.372566</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1992</th>\n",
+       "      <td>3.463842</td>\n",
+       "      <td>5.520356</td>\n",
+       "      <td>6.469725</td>\n",
+       "      <td>8.615627</td>\n",
+       "      <td>5.541553</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1993</th>\n",
+       "      <td>3.588631</td>\n",
+       "      <td>5.211826</td>\n",
+       "      <td>5.989260</td>\n",
+       "      <td>11.298341</td>\n",
+       "      <td>6.127085</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1994</th>\n",
+       "      <td>3.708234</td>\n",
+       "      <td>6.271460</td>\n",
+       "      <td>6.180145</td>\n",
+       "      <td>10.697572</td>\n",
+       "      <td>6.044093</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Bildung und Forschung  Finanzen und Steuern  Sicherheit  \\\n",
+       "Jahr                                                            \n",
+       "1990               2.915631              4.284407    6.232319   \n",
+       "1991               3.196256              4.556436    6.403684   \n",
+       "1992               3.463842              5.520356    6.469725   \n",
+       "1993               3.588631              5.211826    5.989260   \n",
+       "1994               3.708234              6.271460    6.180145   \n",
+       "\n",
+       "      Soziale Wohlfahrt   Verkehr  \n",
+       "Jahr                               \n",
+       "1990           6.875148  4.626737  \n",
+       "1991           8.091567  5.372566  \n",
+       "1992           8.615627  5.541553  \n",
+       "1993          11.298341  6.127085  \n",
+       "1994          10.697572  6.044093  "
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "adf.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Datenvisualisierung"
    ]
   },
@@ -383,8 +523,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Es kann ohne weiteres mit weiteren "
+    "Es kann ohne weiteres mit weiteren [ColorSchemes](https://matplotlib.org/stable/users/explain/colors/colormaps.html) experimentiert werden."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
