Füge einen Link zu den Daten ein

--- a/docs/240923/staatsausgaben.ipynb
+++ b/docs/240923/staatsausgaben.ipynb
@@ -33,6 +33,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Die Datengrundlagen finden sich im Original \n",
+    "[hier](https://www.data.finance.admin.ch/superset/dashboard/20/?native_filters_key=WCVvoyUnzQXg13MxWMFP6lLb-KJqJwSbacSVF7jB-iriWek98_qOj_IlQk0xj__B)\n",
+    "und aufbereitet \n",
+    "[hier](staatsausgaben.csv)."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
