Stand der Arbeiten

--- a/docs/240923/musterloesung_staatsausgaben.ipynb
+++ b/docs/240923/musterloesung_staatsausgaben.ipynb
@@ -531,7 +531,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "plt.figure()\n",
+    "plt.scatter(df['Sicherheit'], df['Soziale Wohlfart'])\n"
+   ]
   }
  ],
  "metadata": {
