Füge Links auf Real Python ein

--- a/docs/241028/uebeungen_iterables.ipynb
+++ b/docs/241028/uebeungen_iterables.ipynb
@@ -11,7 +11,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Python Listen"
+    "## Python Listen\n",
+    "\n",
+    "Eine über das vorliegende Skript hinausgehende Anleitung zu Python Listen findet sich auf\n",
+    "[Real Python](https://realpython.com/python-lists-tuples/)."
    ]
   },
   {
@@ -90,6 +93,16 @@
    "source": [
     "mitte = dreierreihe[3:6]\n",
     "mitte"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Python Dictionaries\n",
+    "\n",
+    "Eine über dieses Skript hinausgehende Anleitung zu Python Dictionaries findet sich auf \n",
+    "[Real Python](https://realpython.com/python-dicts/)."
    ]
   },
   {
