Ergänze die Übungen für die Iterables

--- a/docs/241028/uebeungen_iterables.ipynb
+++ b/docs/241028/uebeungen_iterables.ipynb
@@ -99,10 +99,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Python Dictionaries\n",
+    "## Python Tuples"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Erstellen eines Tuples\n",
     "\n",
-    "Eine über dieses Skript hinausgehende Anleitung zu Python Dictionaries findet sich auf \n",
-    "[Real Python](https://realpython.com/python-dicts/)."
+    "Erstellen Sie ein Tuple, das die Namen von drei Städten enthält."
    ]
   },
   {
@@ -110,7 +116,127 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Erstellen Sie hier das Tuple städte\n",
+    "städte = (\"Zürich\", \"Genf\", \"Basel\")\n",
+    "städte"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Zugriff auf Tuple-Elemente\n",
+    "\n",
+    "Greifen Sie auf das zweite Element des Tuples zu und geben Sie es aus."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Zugriff auf das zweite Element\n",
+    "zweite_stadt = städte[1]\n",
+    "zweite_stadt"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Iterieren über ein Tuple\n",
+    "\n",
+    "Iterieren Sie über das Tuple der Städte und geben Sie jede Stadt in Großbuchstaben aus."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Iterieren über das Tuple\n",
+    "for stadt in städte:\n",
+    "    print(stadt.upper())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Python Dictionaries\n",
+    "\n",
+    "Eine über dieses Skript hinausgehende Anleitung zu Python Dictionaries findet sich auf \n",
+    "[Real Python](https://realpython.com/python-dicts/)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Erstellen eines Dictionaries\n",
+    "\n",
+    "Erstellen Sie ein Dictionary, das die Namen von fünf Schülern als Schlüssel und ihre Noten in Mathematik als Werte enthält."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Erstellen Sie hier das Dictionary schueler_noten\n",
+    "schueler_noten = {\n",
+    "    \"Anna\": 5.5,\n",
+    "    \"Ben\": 4.0,\n",
+    "    \"Clara\": 5.0,\n",
+    "    \"David\": 3.5,\n",
+    "    \"Eva\": 4.5\n",
+    "}\n",
+    "schueler_noten"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Zugriff auf Dictionary-Werte\n",
+    "\n",
+    "Greifen Sie auf die Note von \"Clara\" zu und geben Sie diese aus."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Zugriff auf Claras Note\n",
+    "claras_note = schueler_noten[\"Clara\"]\n",
+    "claras_note"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Hinzufügen eines neuen Eintrags\n",
+    "\n",
+    "Fügen Sie dem Dictionary einen neuen Schüler \"Felix\" mit der Note 4.8 hinzu."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Hinzufügen von Felix\n",
+    "schueler_noten[\"Felix\"] = 4.8\n",
+    "schueler_noten"
+   ]
   }
  ],
  "metadata": {
