Bereinige das Aufgabenblatt

--- a/docs/241028/uebeungen_iterables.ipynb
+++ b/docs/241028/uebeungen_iterables.ipynb
@@ -32,9 +32,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# erstellen Sie hier die Liste durch_drei_teilbar\n",
-    "durch_drei_teilbar = [i for i in range(3,100,3)]\n",
-    "durch_drei_teilbar"
+    "# erstellen Sie hier die Liste durch_drei_teilbar"
    ]
   },
   {
@@ -48,23 +46,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[3, 6, 9, 12, 15, 18, 21, 24, 27, 30]"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "dreierreihe = durch_drei_teilbar[:10]\n",
-    "dreierreihe"
+    "# implementieren Sie hier Ihre Lösung"
    ]
   },
   {
@@ -76,23 +62,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[12, 15, 18]"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "mitte = dreierreihe[3:6]\n",
-    "mitte"
+    "# implementieren Sie hier Ihre Lösung"
    ]
   },
   {
@@ -117,9 +91,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Erstellen Sie hier das Tuple städte\n",
-    "städte = (\"Zürich\", \"Genf\", \"Basel\")\n",
-    "städte"
+    "# Erstellen Sie hier das Tuple städte"
    ]
   },
   {
@@ -137,9 +109,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Zugriff auf das zweite Element\n",
-    "zweite_stadt = städte[1]\n",
-    "zweite_stadt"
+    "# Zugriff auf das zweite Element"
    ]
   },
   {
@@ -157,9 +127,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Iterieren über das Tuple\n",
-    "for stadt in städte:\n",
-    "    print(stadt.upper())"
+    "# Iterieren über das Tuple"
    ]
   },
   {
@@ -187,15 +155,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Erstellen Sie hier das Dictionary schueler_noten\n",
-    "schueler_noten = {\n",
-    "    \"Anna\": 5.5,\n",
-    "    \"Ben\": 4.0,\n",
-    "    \"Clara\": 5.0,\n",
-    "    \"David\": 3.5,\n",
-    "    \"Eva\": 4.5\n",
-    "}\n",
-    "schueler_noten"
+    "# Erstellen Sie hier das Dictionary schueler_noten"
    ]
   },
   {
@@ -213,9 +173,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Zugriff auf Claras Note\n",
-    "claras_note = schueler_noten[\"Clara\"]\n",
-    "claras_note"
+    "# Zugriff auf Claras Note"
    ]
   },
   {
@@ -233,9 +191,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Hinzufügen von Felix\n",
-    "schueler_noten[\"Felix\"] = 4.8\n",
-    "schueler_noten"
+    "# Hinzufügen von Felix"
    ]
   }
  ],
