--- a/docs/oop_leverage_effekt/testumgebung.ipynb
+++ b/docs/oop_leverage_effekt/testumgebung.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,12 +28,14 @@
     "    2400: ['Bankverbindlichkeiten', 1_000],\n",
     "    2451: ['Hypothek', 1_000_000],\n",
     "    2600: ['Rückstellungen', 20],\n",
+    "    2800: ['Aktienkapital', 1_500_000],\n",
+    "    2900: ['Gesetzliche Kapitalreserven', 500_000],\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -51,13 +53,33 @@
        "1001000"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "testbilanz.get_verzinsliches_fk()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2000000"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "testbilanz.get_ek()"
    ]
   },
   {
