--- a/docs/oop_leverage_effekt/testumgebung.ipynb
+++ b/docs/oop_leverage_effekt/testumgebung.ipynb
@@ -13,29 +13,61 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from bilanz import Bilanz"
+    "from bilanz import Bilanz\n",
+    "from erfolgsrechnung import Erfolgsrechnung"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Testkonti"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "aktiven = {}\n",
+    "aktiven = {\n",
+    "    1000: ['Kasse',            2400],\n",
+    "    1020: ['Bank',            12900],\n",
+    "    1100: ['F L&L',           29600],\n",
+    "    1200: ['Vorräte',          5300],\n",
+    "    1500: ['Maschinen',       15800],\n",
+    "    1510: ['Mobiliar',         7200],\n",
+    "    1530: ['Fahrzeuge',       14000],\n",
+    "    1540: ['Werkzeuge',        3400],\n",
+    "    1600: ['Liegenschaften', 400000],\n",
+    "}\n",
+    "\n",
     "passiven = {\n",
-    "    2000: ['VLL', 500],\n",
-    "    2400: ['Bankverbindlichkeiten', 1_000],\n",
-    "    2451: ['Hypothek', 1_000_000],\n",
-    "    2600: ['Rückstellungen', 20],\n",
-    "    2800: ['Aktienkapital', 1_500_000],\n",
-    "    2900: ['Gesetzliche Kapitalreserven', 500_000],\n",
+    "    2000: ['V L&L',           37500],\n",
+    "    2451: ['Hypothek',       200000],\n",
+    "    2800: ['Eigenkapital',   249100],\n",
+    "    2891: ['Jahresgewinn',     4000],    \n",
+    "}\n",
+    "\n",
+    "aufwand = {\n",
+    "    5000: ['Personalaufwand',          65000],\n",
+    "    6000: ['Raumaufwand',              12000],\n",
+    "    6500: ['Verwaltungsaufwand',        3000],\n",
+    "    6600: ['Werbeaufwand',              4000],\n",
+    "    6700: ['Übriger Betriebsaufwand',   6000],\n",
+    "    6800: ['Abschreibungen',            5000],\n",
+    "    6900: ['Zinsaufwand',               1000],\n",
+    "    9200: ['Gewinn',                    4000],\n",
+    "}\n",
+    "\n",
+    "ertrag = {\n",
+    "    3400: ['Dienstleistungsertrag',   100000],\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,16 +76,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1001000"
+       "200000"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -64,22 +96,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2000000"
+       "253100"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "testbilanz.get_ek()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_er = Erfolgsrechnung(ertrag, aufwand)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1000"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_er.get_zinsaufwand()"
    ]
   },
   {
