Implementiere eine Art overloading
Unternehmen können die Konti wahlweise aus
DataFrames, CSV-Files oder Dictionaries übernehmen

--- a/docs/oop_leverage_effekt/testumgebung.ipynb
+++ b/docs/oop_leverage_effekt/testumgebung.ipynb
@@ -68,6 +68,41 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "konti_dict = {\n",
+    "    1000: ['Kasse',            2400],\n",
+    "    1020: ['Bank',            12900],\n",
+    "    1100: ['F L&L',           29600],\n",
+    "    1200: ['Vorräte',          5300],\n",
+    "    1500: ['Maschinen',       15800],\n",
+    "    1510: ['Mobiliar',         7200],\n",
+    "    1530: ['Fahrzeuge',       14000],\n",
+    "    1540: ['Werkzeuge',        3400],\n",
+    "    1600: ['Liegenschaften', 400000],\n",
+    "\n",
+    "    2000: ['V L&L',           37500],\n",
+    "    2451: ['Hypothek',       200000],\n",
+    "    2800: ['Eigenkapital',   249100],\n",
+    "    2891: ['Jahresgewinn',     4000],    \n",
+    "\n",
+    "    5000: ['Personalaufwand',          65000],\n",
+    "    6000: ['Raumaufwand',              12000],\n",
+    "    6500: ['Verwaltungsaufwand',        3000],\n",
+    "    6600: ['Werbeaufwand',              4000],\n",
+    "    6700: ['Übriger Betriebsaufwand',   6000],\n",
+    "    6800: ['Abschreibungen',            5000],\n",
+    "    6900: ['Zinsaufwand',               1000],\n",
+    "    9200: ['Gewinn',                    4000],\n",
+    "\n",
+    "    3400: ['Dienstleistungsertrag',   100000],\n",
+    "}"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -76,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +184,7 @@
        "1500   Maschinen  15800"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -161,31 +196,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "ug1 = Unternehmen(konti)"
+    "ug1 = Unternehmen('konti.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "253100"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "ug1.bilanz.get_ek()"
+    "ug2 = Unternehmen(konti)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ug3 = Unternehmen(konti_dict)"
    ]
   },
   {
