--- a/docs/250113/caesar.ipynb
+++ b/docs/250113/caesar.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,94 +42,25 @@
     "        encrypting_table[alphabet[i]] = shiftet_alphabet[i]\n",
     "        \n",
     "    for key, value in encrypting_table.items():\n",
-    "        decrypting_table[value] = key            \n",
-    "\n",
+    "        decrypting_table[value] = key   \n",
+    "        \n",
     "    if encrypt:\n",
-    "        for c in text:\n",
-    "            for key, value in encrypting_table.items():\n",
-    "                if c == key:\n",
-    "                    result += value\n",
+    "        table = encrypting_table\n",
     "    else:\n",
-    "        for c in text:\n",
-    "            for key, value in decrypting_table.items():\n",
-    "                if c == key:\n",
-    "                    result += value\n",
-    "    \n",
+    "        table = decrypting_table   \n",
+    "        \n",
+    "    for c in text:\n",
+    "        for key, value in table.items():\n",
+    "            if c == key:\n",
+    "                result += value      \n",
+    "\n",
     "    return result\n",
     "            "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Im Namen Gottes des Allmächtigen!\n",
-      "\n",
-      "Das Schweizervolk und die Kantone,\n",
-      "\n",
-      "in der Verantwortung gegenüber der Schöpfung,\n",
-      "\n",
-      "im Bestreben, den Bund zu erneuern, um Freiheit und Demokratie, Unabhängigkeit und Frieden in Solidarität und Offenheit gegenüber der Welt zu stärken,\n",
-      "\n",
-      "im Willen, in gegenseitiger Rücksichtnahme und Achtung ihre Vielfalt in der Einheit zu leben,\n",
-      "\n",
-      "im Bewusstsein der gemeinsamen Errungenschaften und der Verantwortung gegenüber den künftigen Generationen,\n",
-      "\n",
-      "gewiss, dass frei nur ist, wer seine Freiheit gebraucht, und dass die Stärke des Volkes sich misst am Wohl der Schwachen,\n",
-      "\n",
-      "geben sich folgende Verfassung\n"
-     ]
-    }
-   ],
-   "source": [
-    "txt = open('input.txt', 'r', encoding='utf-8')\n",
-    "print(txt.read())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "umlaute = ['ä', 'Ä', 'ö', 'Ö', 'ü', 'Ü']"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "test = txt.read()\n",
-    "test = test.lower()\n",
-    "print(test)\n",
-    "test = test.replace(' ', '')\n",
-    "test = test.replace('\\n','')\n",
-    "test = [char\n",
-    "        for char in test\n",
-    "        if char not in string.punctuation]\n",
-    "test = ''.join(test)\n",
-    "print(test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -189,81 +120,6 @@
     "output_file = 'output.txt'\n",
     "caesar_chiffre(input_file, output_file, 5, True)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "imnamengottesdesallmã¤chtigendasschweizervolkunddiekantoneinderverantwortunggegenã¼berderschã¶pfungimbestrebendenbundzuerneuernumfreiheitunddemokratieunabhã¤ngigkeitundfriedeninsolidaritã¤tundoffenheitgegenã¼berderweltzustã¤rkenimwilleningegenseitigerrã¼cksichtnahmeundachtungihrevielfaltindereinheitzulebenimbewusstseindergemeinsamenerrungenschaftenundderverantwortunggegenã¼berdenkã¼nftigengenerationengewissdassfreinuristwerseinefreiheitgebrauchtunddassdiestã¤rkedesvolkessichmisstamwohlderschwachengebensichfolgendeverfassung\n"
-     ]
-    }
-   ],
-   "source": [
-    "with open('input.txt', 'r') as file:\n",
-    "    lines = [line.rstrip() for line in file]\n",
-    "    \n",
-    "test = ''\n",
-    "\n",
-    "for line in lines:\n",
-    "    test += line\n",
-    "    \n",
-    "test = test.lower()\n",
-    "test = test.replace(' ','')\n",
-    "test = test.replace('\\n','')\n",
-    "test = test.replace('ä','ae')\n",
-    "test = [char\n",
-    "        for char in test\n",
-    "        if char not in string.punctuation]\n",
-    "test = ''.join(test)\n",
-    "    \n",
-    "print(test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "imnamengottesdesallmã¤chtigendasschweizervolkunddiekantoneinderverantwor\n",
-      "tunggegenã¼berderschã¶pfungimbestrebendenbundzuerneuernumfreiheitunddemo\n",
-      "kratieunabhã¤ngigkeitundfriedeninsolidaritã¤tundoffenheitgegenã¼berderwe\n",
-      "ltzustã¤rkenimwilleningegenseitigerrã¼cksichtnahmeundachtungihrevielfalt\n",
-      "indereinheitzulebenimbewusstseindergemeinsamenerrungenschaftenunddervera\n",
-      "ntwortunggegenã¼berdenkã¼nftigengenerationengewissdassfreinuristwerseine\n",
-      "freiheitgebrauchtunddassdiestã¤rkedesvolkessichmisstamwohlderschwachenge\n",
-      "bensichfolgendeverfassung\n"
-     ]
-    }
-   ],
-   "source": [
-    "resultat = ''\n",
-    "for i in range(len(test)):\n",
-    "    if i % 72 == 0:\n",
-    "        resultat += '\\n'\n",
-    "        resultat += test[i]\n",
-    "        \n",
-    "    else:\n",
-    "        resultat += test[i]\n",
-    "        \n",
-    "print(resultat)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
