--- a/docs/250113/caesar_chiffre.ipynb
+++ b/docs/250113/caesar_chiffre.ipynb
@@ -13,7 +13,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import string"
+    "import string\n",
+    "import datetime"
    ]
   },
   {
@@ -194,6 +195,55 @@
     "        \n",
     "        "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def shift(key: int) -> dict:\n",
+    "    '''Die Funktion erstellt ein um den Wert key (bzw. key mod) \n",
+    "    verschobenes Dictionary für lateinische Kleinbuchstaben.'''\n",
+    "    key = key % 26\n",
+    "    \n",
+    "    alphabet = [char for char in string.ascii_lowercase]\n",
+    "    shifted_alphabet = alphabet[key:len(alphabet)] + alphabet[0:key]\n",
+    "    \n",
+    "    table = {}\n",
+    "    \n",
+    "    for i in range(len(alphabet)):\n",
+    "        table[alphabet[i]] = shifted_alphabet[i]\n",
+    "        \n",
+    "    return table"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def crypto(text: string, key: int, encrypt:bool=True) -> str:\n",
+    "    table = shift(key)\n",
+    "    result = ''\n",
+    "    for char in text:\n",
+    "        for key, value in table.items():\n",
+    "            if encrypt:\n",
+    "                if char == key:\n",
+    "                    result += value\n",
+    "            else:\n",
+    "                if char == value:\n",
+    "                    result += key\n",
+    "    return result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -212,7 +262,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.0"
+   "version": "3.13.1"
   }
  },
  "nbformat": 4,
