Im Unterricht erstelltes Notebook

--- a/docs/250113/caesar_chiffre.ipynb
+++ b/docs/250113/caesar_chiffre.ipynb
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,6 +236,75 @@
     "                if char == value:\n",
     "                    result += key\n",
     "    return result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def text_cleaning(text: str) -> str:\n",
+    "    text = text.lower()\n",
+    "    text = text.replace('ä', 'ae')\n",
+    "    text = text.replace('ö', 'oe')\n",
+    "    text = text.replace('ü', 'ue')\n",
+    "    \n",
+    "    return text\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def text_reader(path: str) -> str:\n",
+    "    with open(path, 'r', encoding='utf-8') as file:\n",
+    "        lines = [line.rstrip() for line in file]\n",
+    "        \n",
+    "        text = ''\n",
+    "        for line in lines:\n",
+    "            text += line\n",
+    "            \n",
+    "    return text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def text_writer(text: str, path:str=''):\n",
+    "    output_text = ''\n",
+    "    for i in range(len(text)):\n",
+    "        if i % 72 == 0:\n",
+    "            output_text += '\\n'\n",
+    "            output_text += text[i]\n",
+    "        else:\n",
+    "            output_text += text[i]\n",
+    "            \n",
+    "    now = datetime.datetime.now()\n",
+    "    date_string = now.strftime(\"%Y%m%d_%H-%M-%S\") + f'-{now.microsecond}'\n",
+    "    file_name = f'{date_string}_output.txt'\n",
+    "    \n",
+    "    with open(file_name, 'w', encoding='utf-8') as file:\n",
+    "        file.write(output_text)     "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def caesar(input_file: str, shift: int, encryption: bool= True) -> None:\n",
+    "    text = text_reader(input_file)\n",
+    "    text = text_cleaning(text)\n",
+    "    text = crypto(text, shift)\n",
+    "    text_writer(text)"
    ]
   },
   {
